# smollm-mimi

./: .gitignore  NOTES.md  README.md  experimental.py  finetune.py  inference.py  main.py  pyproject.toml  setup.py  tokenize_dataset.py  train.py  train_emilia.py  train_qa.py  transform.py
scripts/: setup.sh
src/: mimi.py
wandb/: latest-run
wandb/run-20250829_065630-w20oloy5/: run-w20oloy5.wandb
wandb/run-20250829_065630-w20oloy5/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250829_065853-nycs2ytk/: run-nycs2ytk.wandb
wandb/run-20250829_065853-nycs2ytk/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250829_070409-k2aljm70/: run-k2aljm70.wandb
wandb/run-20250829_070409-k2aljm70/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250829_070510-vhtrsgzt/: run-vhtrsgzt.wandb
wandb/run-20250829_070510-vhtrsgzt/files/: config.yaml  wandb-metadata.json  (+1 more)
wandb/run-20250829_072109-dy99hsm6/: run-dy99hsm6.wandb
wandb/run-20250829_072454-5430aakr/: run-5430aakr.wandb
wandb/run-20250829_090620-uh9giyfw/: run-uh9giyfw.wandb
wandb/run-20250829_092106-mhsyfn96/: run-mhsyfn96.wandb
wandb/run-20250829_092141-5f1b20jl/: run-5f1b20jl.wandb
wandb/run-20250829_094450-z4jogfsf/: run-z4jogfsf.wandb
wandb/run-20250829_110910-1mcz8a75/: run-1mcz8a75.wandb
wandb/run-20250829_221725-fdfrl55o/: run-fdfrl55o.wandb
wandb/run-20250829_221901-7pj5kw1w/: run-7pj5kw1w.wandb
wandb/run-20250829_222254-o5lcenll/: run-o5lcenll.wandb
wandb/run-20250830_115656-0ogns2uz/: run-0ogns2uz.wandb
(+58 files in other folders)
